# chatbot

./: main.py  pyproject.toml
backend/: ingest.py  main.py  rag.py
data/: index.faiss  store.pkl
data/docs/: policy_document.txt
frontend/: app.py
